# pythonknot

./: .gitignore  .gitmodules  MANIFEST.in  PERFORMANCE_TESTING.md  README.md  alex_table_13.txt  compile_chain.sh  docker_build_wheel.sh  setup.py
.github/workflows/: build.yml  publish.yml
docker/: Dockerfile
pythonknot-conda-recipe/: build.sh  meta.yaml
src/HOMFLY/: CMakeLists.txt
src/HOMFLY/cmake_file/: FindLibGC.cmake
src/HOMFLY/src/: bound.cpp  bound.h  control.cpp  control.h  dllink.cpp  dllink.h  homfly.cpp  homfly.h  knot.cpp  knot.h  main.cpp  model.cpp  model.h  order.cpp  order.h  poly.cpp  poly.h
src/cpp_module/: CMakeLists.txt
src/cpp_module/cln/: .gitignore
src/cpp_module/cln/include/cln/: config.h  intparam.h  ring.h
src/cpp_module/cmake_file/: FindCLN.cmake  FindPythonAnaconda.cmake
src/cpp_module/ginac/: AUTHORS  CMakeLists.txt  INSTALL  INSTALL.CMake  NEWS  configure.ac
src/cpp_module/ginac/check/: CMakeLists.txt  Makefile.am  bugme_chinrem_gcd.cpp  check_inifcns.cpp  check_lsolve.cpp  check_matrices.cpp  check_numeric.cpp  error_report.h  exam_archive.cpp  exam_clifford.cpp  exam_color.cpp  exam_cra.cpp  exam_differentiation.cpp  exam_factor.cpp  exam_indexed.cpp  exam_inifcns.cpp  exam_inifcns_nstdsums.cpp  exam_inifcns_nstdsums.h  exam_lsolve.cpp  exam_matrices.cpp  exam_misc.cpp  exam_mod_gcd.cpp  exam_normalization.cpp  exam_numeric.cpp  exam_paranoia.cpp  exam_polygcd.cpp  exam_powerlaws.cpp  exam_pseries.cpp  exam_real_imag.cpp  exam_structure.cpp  genex.cpp  heur_gcd_bug.cpp  match_bug.cpp  mul_eval_memleak.cpp  numeric_archive.cpp  parser_bugs.cpp  parser_memleak.cpp  randomize_serials.cpp  test_runner.h  time_antipode.cpp  (+26 more)
src/cpp_module/ginac/cmake/modules/: FindCLN.cmake
src/cpp_module/ginac/doc/tutorial/: ginac.texi
src/cpp_module/ginac/ginac/: CMakeLists.txt  add.cpp  add.h  archive.cpp  archive.h  assertion.h  basic.cpp  basic.h  class_info.h  clifford.cpp  clifford.h  color.cpp  color.h  compiler.h  constant.cpp  constant.h  container.h  ex.cpp  ex.h  excompiler.cpp  excompiler.h  expair.cpp  expair.h  expairseq.cpp  expairseq.h  exprseq.cpp  exprseq.h  factor.cpp  factor.h  fail.cpp  fail.h  fderivative.cpp  fderivative.h  flags.h  function.cppy  function.hppy  function.py  ginac.h  hash_map.h  idx.cpp  (+49 more)
src/cpp_module/ginac/ginac/parser/: debug.h  default_reader.cpp  lexer.cpp  lexer.h  parse_binop_rhs.cpp  parse_context.cpp  parse_context.h  parser.cpp  parser.h  parser_compat.cpp
src/cpp_module/ginac/ginac/polynomial/: chinrem_gcd.cpp  chinrem_gcd.h  collect_vargs.cpp  collect_vargs.h  cra_garner.cpp  cra_garner.h  debug.h  divide_in_z_p.cpp  divide_in_z_p.h  euclid_gcd_wrap.h  eval_point_finder.h  eval_uvar.h  gcd_euclid.h  gcd_uvar.cpp  heur_gcd_uvar.h  interpolate_padic_uvar.h  mgcd.cpp  mod_gcd.cpp  mod_gcd.h  newton_interpolate.h  normalize.cpp  normalize.h  optimal_vars_finder.cpp  optimal_vars_finder.h  pgcd.cpp  pgcd.h  poly_cra.h  prem_uvar.h  primes_factory.h  primpart_content.cpp  remainder.cpp  remainder.h  ring_traits.h  smod_helpers.h  sr_gcd_uvar.h  upoly.h  upoly_io.cpp  upoly_io.h
src/cpp_module/ginac/ginsh/: CMakeLists.txt  ginsh.1.in  ginsh.h  ginsh_extensions.h  ginsh_fcn_help.py  ginsh_lexer.lpp  ginsh_op_help.py  ginsh_parser.ypp
src/cpp_module/ginac/scripts/: fixupind.py  yaptu.py
src/cpp_module/ginac/tools/: CMakeLists.txt  viewgar.1.in  viewgar.cpp
src/cpp_module/src/: hull2.cpp  hull2.h  knot.cpp  knot.h  knot_alex.cpp  knot_alex_table.h  knottype.cpp  knottype.h  main.cpp  my_function.cpp  myfunction.h  optimized_types.h  quickhull.h  table_knot_Alexander_polynomial.txt
src/pdb_parser/: CMakeLists.txt
src/pdb_parser/src/: pdb.cpp  pdb.hpp
test/: test.py  test2.py  test_main.ipynb  test_rmsd.ipynb  test_sll.ipynb  test_time.ipynb  traj_knot31_L300_close_short.txt
wheelhouse/: pythonknot-0.1.12-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.12-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.12-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.12-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.12-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.13-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.13-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.13-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.13-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.13-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.14-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.14-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.14-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pythonknot-0.1.14-cp38-cp38-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  (+11 more)
(+11 files in other folders)
